Rename wsgi and conf

--- a/TeacherTally.conf
+++ b/TeacherTally.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerName 137.184.158.41
-    ServerAdmin christopherliu@137.184.158.41
-    WSGIScriptAlias / /var/www/P04/loophole.wsgi
+    ServerName DROPLET_IP_ADDRESS
+    ServerAdmin USERNAME@DROPLET_IP_ADDRESS
+    WSGIScriptAlias / /var/www/P04/TeacherTally.wsgi
     <Directory /var/www/P04/app/>
         Order allow,deny
 	Allow from all
